@@ -8,6 +8,26 @@ if (requireNamespace("tinytest", quietly=TRUE) &&
     ## R makes us to this
     Sys.setenv("R_TESTS"="")
 
+    ## Force tests to be executed if in dev release which we define as
+    ## having a sub-release, eg 0.9.15.5 is one whereas 0.9.16 is not
+    if (length(strsplit(packageDescription("Rcpp")$Version, "\\.")[[1]]) > 3) {	# dev release, and
+        if (Sys.getenv("RunAllRcppTests") != "no") { 				# if env.var not yet set
+            message("Setting \"RunAllRcppTests\"=\"yes\" for development release\n")
+            Sys.setenv("RunAllRcppTests"="yes")
+        }
+    }
+
+    ## On Travis also always set tests; see
+    ## https://docs.travis-ci.com/user/environment-variables/#default-environment-variables
+    if ((Sys.getenv("CI") == "true")     ||
+        (Sys.getenv("TRAVIS") == "true") ||
+        (Sys.getenv("CONTINUOUS_INTEGRATION") == "true")) {
+        if (Sys.getenv("RunAllRcppTests") != "no") { 				# if env.var not yet set
+            message("Always enabling \"RunAllRcppTests\"=\"yes\" on Travis\n")
+            Sys.setenv("RunAllRcppTests"="yes")
+        }
+    }
+
     ## there are several more granular ways to test files in a tinytest directory,
     ## see its package vignette; tests can also run once the package is installed
     ## using the same command `test_package(pkgName)`, or by director or file
